--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script
-      defer
-      type="application/javascript"
-      src="./script_migration.js"
-    ></script>
+    <meta charset="utf-8">
+    <title>MINI REACT APP</title>
+    <meta name="description" content="MiniReactESGI">
+    <link rel="stylesheet" href="/frontend/assets/css/main.css">
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/framework/app.js"></script>
   </body>
 </html>
