--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>MINI REACT APP</title>
-    <meta name="description" content="MiniReactESGI">
-    <link rel="stylesheet" href="/frontend/assets/css/main.css">
+    <meta name="description" content="MiniReactESGI" />
+    <link rel="stylesheet" href="main.css" />
+    <script defer src="script_migration.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/framework/app.js"></script>
   </body>
 </html>
