--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>MINI REACT APP</title>
     <meta name="description" content="MiniReactESGI" />
     <link rel="stylesheet" href="main.css" />
-    <script defer src="app.js"></script>
+    <script defer type="module" src="app.js"></script>
   </head>
   <body>
     <div id="root"></div>
