--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MINI REACT APP</title>
-    <meta name="description" content="MiniReactESGI" />
+    <title>MiniRienAct</title>
+    <meta name="description" />
     <link rel="stylesheet" href="main.css" />
     <script defer type="module" src="app.js"></script>
   </head>
